third_party/rust/chromium_crates_io/vendor/cxx-1.0.115/tests/ui/fallible_fnptr.stderr
error: function pointer returning Result is not supported yet
 --> tests/ui/fallible_fnptr.rs:4:24
  |
4 |         fn f(callback: fn() -> Result<()>);
  |                        ^^^^^^^^^^^^^^^^^^
